--- a/site-final/index.html
+++ b/site-final/index.html
@@ -108,5 +108,10 @@
 			<img src="images/section04-horn.png" id="horn">
 		</section>
 	</div>
+
+<!--analytics-->
+<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+<script src="http://tutsplus.github.io/github-analytics/ga-tracking.min.js"></script>
+
 </body>
 </html>
